@@ -73,6 +73,9 @@ JH/14 Change header file name for freeradius-client.  Relevant if compiling
 
 JH/15 Bug 1712: Introduce $prdr_requested flag variable
 
+JH/16 Bug 1714: Permit an empty string as expansion result for transport
+      option transport_filter, meaning no filtering.
+
 
 Exim version 4.86
 -----------------
